Add Stage EX roadmap + REPL test results + direct launch script
Stage EX（REPL 実用化ロードマップ）を advanced-topics.md に追加:
- EX-1: ツール拡充（法令全文検索、構造表示、改正履歴）
- EX-2: SystemPrompt チューニングの実践適用
- EX-3: 回答品質改善（出典明示、空回答リカバリ）
- EX-4: UI/UX 改善（ストリーミング、sbt 依存脱却）

ガイド §8.3 末尾に「ここから先は自由に拡張」の出口を設置。
NOTES.md に run-repl.sh 直接起動テスト結果を記録。
run-repl.sh（sbt fork の TTY 問題切り分け用）を追加。

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>